--- a/ec-order/src/main/resources/application.properties
+++ b/ec-order/src/main/resources/application.properties
@@ -1,1 +1,12 @@
 spring.application.name=ec-order
+server.port=8003
+
+#Db Configuration
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
+
+spring.jpa.defer-datasource-initialization=true
