--- a/ec-order/src/main/resources/application.properties
+++ b/ec-order/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 spring.application.name=ec-order
 server.port=8003
 
+hr-worker.host=http://localhost:8001/
 #Db Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
