--- a/ec-product/src/main/resources/application.properties
+++ b/ec-product/src/main/resources/application.properties
@@ -1,6 +1,15 @@
 spring.application.name=ec-products
 server.port=8001
 
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.instance.lease-renewal-interval-in-seconds=30
+eureka.client.registry-fetch-interval-seconds=5
+
+spring.cloud.openfeign.client.config.default.connect-timeout=3000
+spring.cloud.openfeign.client.config.default.read-timeout=5000
+
 #Db Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.username=sa
