--- a/ec-order/src/main/resources/application.properties
+++ b/ec-order/src/main/resources/application.properties
@@ -1,15 +1,16 @@
 spring.application.name=ec-order
-server.port=8003
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.lease-renewal-interval-in-seconds=30
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.instance.lease-renewal-interval-in-seconds=30
 eureka.client.registry-fetch-interval-seconds=5
 
 spring.cloud.openfeign.client.config.default.connect-timeout=3000
 spring.cloud.openfeign.client.config.default.read-timeout=5000
-
 
 #Db Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
