--- a/ec-order/src/main/resources/application.properties
+++ b/ec-order/src/main/resources/application.properties
@@ -9,8 +9,10 @@ eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
 eureka.client.registry-fetch-interval-seconds=5
 
-spring.cloud.openfeign.client.config.default.connect-timeout=3000
-spring.cloud.openfeign.client.config.default.read-timeout=5000
+spring.cloud.openfeign.client.config.default.connect-timeout=2000
+spring.cloud.openfeign.client.config.default.read-timeout=8000
+
+resilience4j.timelimiter.instances.getOrderUsingProductIdCircuitBreaker.timeout-duration=2s
 
 #Db Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
