--- a/ec-order/src/main/resources/application.properties
+++ b/ec-order/src/main/resources/application.properties
@@ -18,3 +18,5 @@ spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 
 spring.jpa.defer-datasource-initialization=true
+
+spring.config.import=configserver:
