--- a/ec-config-server/src/main/resources/application.properties
+++ b/ec-config-server/src/main/resources/application.properties
@@ -2,3 +2,5 @@ spring.application.name=ec-config-server
 server.port=8888
 
 spring.cloud.config.server.git.uri=https://github.com/Guilsimi/e_commerce_configs.git
+spring.cloud.config.server.git.username=${GITHUB_USERNAME}
+spring.cloud.config.server.git.password=${GITHUB_TOKEN}
