--- a/ec-order/src/main/resources/application.properties
+++ b/ec-order/src/main/resources/application.properties
@@ -20,3 +20,4 @@ spring.h2.console.path=/h2-console
 spring.jpa.defer-datasource-initialization=true
 
 spring.config.import=configserver:
+management.endpoints.web.exposure.include=*
