--- a/ec-user/src/main/resources/application.properties
+++ b/ec-user/src/main/resources/application.properties
@@ -1,5 +1,13 @@
 spring.application.name=ec-user
-server.port=8000
+server.port=${PORT:0}
+
+eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
+eureka.instance.lease-renewal-interval-in-seconds=30
+
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka
+eureka.client.register-with-eureka=true
+eureka.client.fetch-registry=true
+eureka.client.registry-fetch-interval-seconds=5
 
 #Db Configuration
 spring.datasource.url=jdbc:h2:mem:testdb
