--- a/ec-gateway-spring-cloud/src/main/resources/application.properties
+++ b/ec-gateway-spring-cloud/src/main/resources/application.properties
@@ -5,5 +5,7 @@ eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
 spring.main.web-application-type=reactive
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8765/ec-oauth/
+
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.web=DEBUG
