--- a/ec-oauth/src/main/resources/application.properties
+++ b/ec-oauth/src/main/resources/application.properties
@@ -2,9 +2,19 @@ spring.application.name=ec-oauth
 server.port=${PORT:0}
 
 eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-eureka.instance.lease-renewal-interval-in-seconds=30
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.registry-fetch-interval-seconds=5
+eureka.instance.hostname=localhost
+
+ec.auth.provider-uri=http://localhost:8765/ec-oauth
+
+ec.auth.jks.keypass=123456
+ec.auth.jks.storepass=123456
+ec.auth.jks.alias=ecblog
+ec.auth.jks.path=keystore/ecblog.jks
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.oauth2=DEBUG
