resource server configurations

--- a/ec-gateway-spring-cloud/src/main/resources/application.properties
+++ b/ec-gateway-spring-cloud/src/main/resources/application.properties
@@ -3,9 +3,11 @@ server.port=8765
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka
 
+spring.main.allow-bean-definition-overriding=true
 spring.main.web-application-type=reactive
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8765/ec-oauth/
+spring.security.oauth2.resourceserver.jwt.jwk-set-uri=http://localhost:8765/ec-oauth/oauth2/jwks
 
 logging.level.org.springframework.cloud.gateway=DEBUG
 logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security.oauth2.jwt=DEBUG
