--- a/ec-oauth/src/main/resources/application.properties
+++ b/ec-oauth/src/main/resources/application.properties
@@ -12,9 +12,14 @@ ec.auth.provider-uri=http://localhost:8765/ec-oauth
 
 ec.auth.jks.keypass=123456
 ec.auth.jks.storepass=123456
-ec.auth.jks.alias=ecblog
-ec.auth.jks.path=keystore/ecblog.jks
+ec.auth.jks.alias=simpleec
+ec.auth.jks.path=keystore/simpleec.jks
+
+my.client.id=admclient
+my.client.secret=adm123
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.web=DEBUG
 logging.level.org.springframework.oauth2=DEBUG
+logging.level.org.springframework.cloud.gateway=DEBUG
+logging.level.org.springframework.security.oauth2.jwt=DEBUG
