Config server configurations, and payment service connected to openpix api

--- a/ec-eureka-server/src/main/resources/application.properties
+++ b/ec-eureka-server/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ec-eureka-server
-server.port=8761
-
-eureka.client.register-with-eureka=false
-eureka.client.fetch-registry=false
+spring.cloud.config.uri=${CONFIG_SERVER_PORT}
+spring.profiles.active=test
+spring.config.import=optional:configserver:
+management.endpoints.web.exposure.include=*
