--- a/ec-oauth/src/main/resources/application.properties
+++ b/ec-oauth/src/main/resources/application.properties
@@ -1,25 +1,5 @@
 spring.application.name=ec-oauth
-server.port=${PORT:0}
-
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.hostname=localhost
-
-ec.auth.provider-uri=http://localhost:8765/ec-oauth
-
-ec.auth.jks.keypass=123456
-ec.auth.jks.storepass=123456
-ec.auth.jks.alias=simpleec
-ec.auth.jks.path=keystore/simpleec.jks
-
-my.client.id=admclient
-my.client.secret=adm123
-
-logging.level.org.springframework.security=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.org.springframework.oauth2=DEBUG
-logging.level.org.springframework.cloud.gateway=DEBUG
-logging.level.org.springframework.security.oauth2.jwt=DEBUG
+spring.cloud.config.uri=${CONFIG_SERVER_PORT}
+spring.profiles.active=test
+spring.config.import=optional:configserver:
+management.endpoints.web.exposure.include=*
