--- a/ec-payment/src/main/resources/application.properties
+++ b/ec-payment/src/main/resources/application.properties
@@ -1,13 +1,6 @@
 spring.application.name=ec-payment
-server.port=8002
-
-#Db Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.defer-datasource-initialization=true
+spring.cloud.config.uri=${CONFIG_SERVER_PORT}
+spring.profiles.active=test
+spring.config.import=optional:configserver:
+management.endpoints.web.exposure.include=*
 
