--- a/ec-product/src/main/resources/application.properties
+++ b/ec-product/src/main/resources/application.properties
@@ -1,20 +1,5 @@
 spring.application.name=ec-products
-server.port=${PORT:0}
-
-eureka.instance.instance-id=${spring.application.name}:${spring.application.instance_id:${random.value}}
-
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
-eureka.instance.lease-renewal-interval-in-seconds=30
-eureka.client.registry-fetch-interval-seconds=5
-
-#Db Configuration
-spring.datasource.url=jdbc:h2:mem:testdb
-spring.datasource.username=sa
-spring.datasource.password=
-
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-
-spring.jpa.defer-datasource-initialization=true
+spring.cloud.config.uri=${CONFIG_SERVER_PORT}
+spring.profiles.active=test
+spring.config.import=optional:configserver:
+management.endpoints.web.exposure.include=*
