--- a/ec-carts/src/main/resources/application.properties
+++ b/ec-carts/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=ec-cart
 spring.cloud.config.uri=${CONFIG_SERVER_PORT}
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.config.import=optional:configserver:
 management.endpoints.web.exposure.include=*
