--- a/ec-payment/pom.xml
+++ b/ec-payment/pom.xml
@@ -76,6 +76,12 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<scope>runtime</scope>
+		</dependency>
+
 		<!-- Kotlin Dependencies -->
 
 		<dependency>
