--- a/ec-payment/src/main/resources/application.properties
+++ b/ec-payment/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=ec-payment
 spring.cloud.config.uri=${CONFIG_SERVER_PORT}
-spring.profiles.active=test
+spring.profiles.active=dev
 spring.config.import=optional:configserver:
 management.endpoints.web.exposure.include=*
 
