--- a/ec-payment/pom.xml
+++ b/ec-payment/pom.xml
@@ -131,7 +131,7 @@
 
 	<repositories>
 		<repository>
-			<id>central</id>
+			<id>sonatype</id>
 			<name>Central Repository</name>
 			<url>https://s01.oss.sonatype.org/content/repositories/snapshots/</url>
 		</repository>
