docker compose file to run microservices in containers

--- a/ec-config-server/src/main/resources/application.properties
+++ b/ec-config-server/src/main/resources/application.properties
@@ -4,3 +4,8 @@ server.port=8888
 spring.cloud.config.server.git.uri=${GITHUB_CONFIG_SERVER}
 spring.cloud.config.server.git.username=${GITHUB_USERNAME}
 spring.cloud.config.server.git.password=${GITHUB_TOKEN}
+
+spring.cloud.config.server.git.timeout=120
+
+management.endpoint.health.show-details=always
+management.endpoints.web.exposure.include=*
