--- a/ec-gateway-spring-cloud/src/main/resources/application.properties
+++ b/ec-gateway-spring-cloud/src/main/resources/application.properties
@@ -3,3 +3,4 @@ spring.cloud.config.uri=${CONFIG_SERVER_PORT}
 spring.profiles.active=dev
 spring.config.import=optional:configserver:
 management.endpoints.web.exposure.include=*
+management.endpoint.health.show-details=always
