--- a/.env
+++ b/.env
@@ -1,8 +1,7 @@
-GITHUB_TOKEN=
-GITHUB_CONFIG_SERVER=
-GITHUB_USERNAME=
-POSTGRES_USER=
-POSTGRES_PASSWORD=
-POSTGRES_DB=
-PGADMIN_EMAIL=
-PGADMIN_PASSWORD=
+GITHUB_TOKEN= # Your github personal access token (https://docs.github.com/en/authentication/keeping-your-account-and-data-secure/managing-your-personal-access-tokens)
+GITHUB_CONFIG_SERVER= # Your config server repository HTTPS link
+GITHUB_USERNAME= # Your username in Github
+POSTGRES_USER= # Your postgres user
+POSTGRES_PASSWORD= # Your postgres password
+PGADMIN_EMAIL= # Your PgAdmin email to access the db
+PGADMIN_PASSWORD= # Your PgAdmin password to access the db
