refactoring the authorization server and resource server, creating a login route to return a jwt token in the response

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,6 @@ replay_pid*
 
 .vscode/
 
-ec-oauth/src/main/resources/keystore/
+ec-gateway-spring-cloud/src/main/resources/ec-auth.pub
+ec-oauth/src/main/resources/ec-auth.key
+ec-oauth/src/main/resources/ec-auth.pub
